Fix style and ingredient label alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -83,6 +83,10 @@ input, textarea, select, .uneditable-input {
   margin-bottom: 15px;
 }
 
+.input-checkbox input {
+   width: auto !important; 
+}
+
 input {
   height: auto !important;
 }
